[package]
name = "zrsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
nix = "0.28.0"
rustyline = "14.0.0"
signal-hook = "0.3.17"
# dirs = "4.0.0"
# rustyline = "10.0.0"
# nix = "0.25"
# signal-hook = "0.3.14"
